--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-namer: CI
+name: CI
 
 # Controls when the workflow will run
 on:
@@ -27,7 +27,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Test project run ... 
-        runs: echo our project test started here ...
+        run: echo our project test started here ...
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
