--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,6 +34,12 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+      - name: npm install
+        uses: action/setp-node@4
+        with: 
+              node-version: '20.x'
+      - name: test
+        run: npm -g install htmlhint
       - name: htmlhint
         run: htmlhint "root.html"
 
