--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,7 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
       - name: npm install
-        uses: action/setp-node@4
+        uses: actions/setup-node@v4
         with: 
               node-version: '20.x'
       - name: test
